// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Должен вернуть трансмиссии из transmissionTypes для марки BMW 1`] = `
Array [
  Object {
    "crossLinkText": "BMW с роботом",
    "key": "FORD_ROBOT",
    "params": Object {
      "transmission": "ROBOT",
    },
    "renderAtFooter": true,
    "transmission": "ROBOT",
    "transmissionRus": "роботом",
    "value": "ROBOT",
  },
  Object {
    "crossLinkText": "BMW с АКПП",
    "key": "FORD_AUTOMATIC",
    "params": Object {
      "transmission": Array [
        "AUTO",
        "AUTOMATIC",
        "ROBOT",
        "VARIATOR",
      ],
    },
    "renderAtFooter": true,
    "transmission": "AUTOMATIC",
    "transmissionRus": "АКПП",
    "value": "AUTOMATIC",
  },
  Object {
    "crossLinkText": "BMW с МКПП",
    "key": "FORD_MECHANICAL",
    "params": Object {
      "transmission": "MECHANICAL",
    },
    "renderAtFooter": true,
    "transmission": "MECHANICAL",
    "transmissionRus": "МКПП",
    "value": "MECHANICAL",
  },
  Object {
    "crossLinkText": "BMW с вариатором",
    "key": "FORD_VARIATOR",
    "params": Object {
      "transmission": "VARIATOR",
    },
    "renderAtFooter": true,
    "transmission": "VARIATOR",
    "transmissionRus": "вариатором",
    "value": "VARIATOR",
  },
]
`;

exports[`Должен вернуть трансмиссии из transmissionTypes для марки BMW и модели 3ER 1`] = `
Array [
  Object {
    "crossLinkText": "BMW 3 серии с роботом",
    "key": "FORD_ROBOT",
    "params": Object {
      "transmission": "ROBOT",
    },
    "renderAtFooter": true,
    "transmission": "ROBOT",
    "transmissionRus": "роботом",
    "value": "ROBOT",
  },
  Object {
    "crossLinkText": "BMW 3 серии с АКПП",
    "key": "FORD_AUTOMATIC",
    "params": Object {
      "transmission": Array [
        "AUTO",
        "AUTOMATIC",
        "ROBOT",
        "VARIATOR",
      ],
    },
    "renderAtFooter": true,
    "transmission": "AUTOMATIC",
    "transmissionRus": "АКПП",
    "value": "AUTOMATIC",
  },
  Object {
    "crossLinkText": "BMW 3 серии с МКПП",
    "key": "FORD_MECHANICAL",
    "params": Object {
      "transmission": "MECHANICAL",
    },
    "renderAtFooter": true,
    "transmission": "MECHANICAL",
    "transmissionRus": "МКПП",
    "value": "MECHANICAL",
  },
  Object {
    "crossLinkText": "BMW 3 серии с вариатором",
    "key": "FORD_VARIATOR",
    "params": Object {
      "transmission": "VARIATOR",
    },
    "renderAtFooter": true,
    "transmission": "VARIATOR",
    "transmissionRus": "вариатором",
    "value": "VARIATOR",
  },
]
`;
